# pq-tls-server

./: .env.example  .gitignore  CHANGELOG.md  CLA.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  INSTALL.md  LICENSE  Makefile  README-profile.md  README.md  RESEARCH-FINDINGS.md  SECURITY-ASSESSMENT.md  SECURITY.md  START-PQ-SERVER.bat  START-SERVER.bat  VULNERABILITY-REPORT.md  docker-compose.yml
.github/workflows/: ci.yml  cla.yml
blog/: README.md  blockchain-quantum-proof-validator.md  defense-cnsa2-migration.md  fintech-post-quantum-tls.md
deploy/helm/: README.md
deploy/helm/pq-tls-server/: Chart.yaml  values.yaml
deploy/helm/pq-tls-server/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml  tls-secret.yaml
etc/: pq-tls-server.conf
etc/systemd/: pq-tls-server.service
examples/: dashboard-preview.html  demo.conf
examples/backend/: backend.py
examples/certs/: ca-cert.pem  ca-key.pem  server-cert.pem  server-key.pem  server.csr
landing/: README.md  index.html
scripts/: benchmark-analyze.py  benchmark-suite.sh  build-and-run.sh  gen-certs.sh  install.sh  mesh-load-test.sh  start-demo.sh
src/benchmark/: bench.c  bench.h  bench_agility.c  bench_agility.h  bench_runner.c
src/common/: crypto_builtins.c  crypto_provider.h  crypto_registry.c  crypto_registry.h  hpke.c  hpke.h  hybrid_combiner.c  hybrid_combiner.h  hybrid_kex.c  hybrid_kex.h  kem_classical.c  kem_classical.h  kem_hqc.c  kem_hqc.h  kem_mlkem.c  kem_mlkem.h  pq_config.c  pq_config.h  pq_errors.c  pq_errors.h  pq_kem.c  pq_kem.h  pq_sig.c  pq_sig.h  pq_utils.c  pq_utils.h  pq_utils_extra.c  pq_utils_extra.h  sig_providers.c  sig_providers.h
src/core/: connection_manager.c  connection_manager.h  epoll_reactor.c  epoll_reactor.h  graceful_drain.c  graceful_drain.h  master_worker.c  master_worker.h  server_config.c  server_config.h
src/dashboard/: dashboard.c  dashboard.h
src/http/: conn_pool.c  conn_pool.h  h2_frame.c  h2_frame.h  hpack.c  hpack.h  http_parser.c  http_parser.h
src/metrics/: prometheus.c  prometheus.h
src/mgmt/: cert_manager.c  cert_manager.h  config_writer.c  config_writer.h  json_helpers.c  json_helpers.h  log_streamer.c  log_streamer.h  mgmt_api.c  mgmt_api.h  mgmt_auth.c  mgmt_auth.h  mgmt_server.c  mgmt_server.h  static_assets.c  static_assets.h
src/mgmt/static/: index.html
src/mgmt/static/css/: charts.css  main.css  wizard.css
src/mgmt/static/js/: api.js  app.js
src/mgmt/static/js/components/: form.js  modal.js  table.js  toast.js
src/mgmt/static/js/pages/: certificates.js  dashboard.js  login.js  logs.js  security.js  settings.js  setup.js  tls.js  upstreams.js
src/proxy/: http_proxy.c  http_proxy.h
src/security/: acl.c  acl.h  rate_limiter.c  rate_limiter.h
src/server/: main.c  tls_server_pq.c  tls_server_pq.h
src/tls/: oqs_tls_integration.c  oqs_tls_integration.h
tests/: test_acl.c  test_conn_pool.c  test_crypto_registry.c  test_epoll_reactor.c  test_h2_frame.c  test_http_parser.c  test_main.c  test_rate_limiter.c
tools/: embed_assets.sh
